--- a/src/public/Register.html
+++ b/src/public/Register.html
@@ -12,9 +12,10 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
     <link rel="stylesheet" href="../style/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -43,9 +44,13 @@
 
     <div data-role="main" class="ui-content">
 
-        <h1 class="headings"><b>Login</b></h1>
+        <h1 class="headings"><b>Register</b></h1>
 
         <form action="/action_page.php">
+            <div class="form-group">
+                <label for="text">Name:</label>
+                <input type="text" class="form-control" id="text" placeholder="Enter Name" name="email">
+            </div>
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
@@ -54,14 +59,25 @@
                 <label for="pwd">Password:</label>
                 <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" name="remember"> Remember me
-                </label>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Register</button>
+
+            <div></div>
         </form>
+
+<!--        <form method="post" action="demoform.asp" >-->
+<!--            <div class="ui-field-contain">-->
+<!--                <label for="fullname" class="textLabel1">Full name:</label>-->
+<!--                <input type="text" name="fullname" id="fullname" >-->
+<!--                <label for="bday" class="textLabel1">Date of Birth:</label>-->
+<!--                <input type="date" name="bday" id="bday">-->
+<!--                <label for="email" class="textLabel1">E-mail:</label>-->
+<!--                <input type="email" name="email" id="email" placeholder="Your email..">-->
+<!--            </div>-->
+<!--            <input type="submit" id="submit" value="Submit">-->
+<!--        </form>-->
     </div>
+
+
 
     <div data-role="footer" id="footer">
         <h1>Insert Footer Text Here</h1>
