--- a/Login.html
+++ b/Login.html
@@ -1,71 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Include meta tag to ensure proper rendering and touch zooming -->
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Include jQuery Mobile stylesheets -->
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <!-- Include the jQuery library -->
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <!-- Include the jQuery Mobile library -->
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
     <link rel="stylesheet" href="Style/style.css">
-    <link rel="stylesheet" href="Style/deliverypage_style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <title>Login</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
 <div data-role="page" id="pageone">
     <div align="center" class="header">
-        <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" >
+        <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60">
     </div>
-
+    <!--Top Banner-->
     <div class="banner">
         <table>
             <tr>
                 <td>
-                    <span class="glyphicon glyphicon-lock" id="lock_icon"></span>
+                    <i class="fas fa-shopping-bag" id="promotion_icon"></i>
                 </td>
                 <td>
-                    <div class="slogan">DEBT OF ULTIMATE MARKETING</div>
+                    <div class="slogan">DEBUT OF ULTIMATE MARKETING</div>
                 </td>
             </tr>
         </table>
     </div>
 
-
-
-    <div data-role="main" class="ui-content">
-
-        <h1 class="headings"><b>Login</b></h1>
-
-        <form action="/action_page.php">
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+    <!--Main Content-->
+    <div data-role="main" class="ui-content" >
+        <form method="post" action="demoform.asp" id="form">
+            <h1 class="login-title"><b>Login</b></h1>
+            <p id = "para">Let's get started </p>
+            <div class="ui-field-contain">
+                <label for="name" id="namelabel"></label>
+                <input type="text" name="name" id="name" placeholder="Username">
+                <label for="password" id="passwordlabel"></label>
+                <input type="password" name="password" id="password"  placeholder="Password">
+                <label for="remember" id="remember-label">Remember me</label>
+                <input type="checkbox" name="remember" id="remember">
+                <br>
+                <button class="btn warning" id="login-btn">Login</button>
+                <p id = "para1">Dont have an account already ?  <u id="register-here"> Register here </u> </p>
             </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" name="remember"> Remember me
-                </label>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
 
-    <div data-role="footer" id="footer">
-        <h1>Insert Footer Text Here</h1>
+    <!--<div data-role="main" class="ui-content">-->
+
+        <!--<h1 class="login-title"><b>Login</b></h1>-->
+        <!--<p id = "para">Let's get started </p>-->
+
+        <!--&lt;!&ndash;<form method="post" action="demoform.asp" id="form">&ndash;&gt;-->
+            <!--&lt;!&ndash;<div class="ui-field-contain">&ndash;&gt;-->
+                <!--&lt;!&ndash;<label for="name" id="name-label"></label>&ndash;&gt;-->
+                <!--&lt;!&ndash;<input type="email" class="form-control" id="name" placeholder="Username" name="name">&ndash;&gt;-->
+                 <!--&lt;!&ndash;<label for="password" id="pword-label"></label>&ndash;&gt;-->
+                <!--&lt;!&ndash;<input type="password" class="form-control" id="password" placeholder="Password" name="password">&ndash;&gt;-->
+                <!--&lt;!&ndash;<label class="form-check-label" id="remember">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<input class="form-check-input" type="checkbox" name="remember"> Remember me&ndash;&gt;-->
+                <!--&lt;!&ndash;</label>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--&lt;!&ndash;<button type="submit" class="btn btn-primary" id="submit">Login</button>&ndash;&gt;-->
+        <!--&lt;!&ndash;</form>&ndash;&gt;-->
+    <!--</div>-->
+
+    <!-- Bottom Navigation -->
+    <div data-role="footer" style="text-align:center;" data-position="fixed">
+        <div data-role="navbar" id="bottom_nav">
+            <ul>
+                <li id="qrcode_icon" style="width:20%">
+                    <i class="fas fa-qrcode"></i>
+                </li>
+                <li id="cart_icon" style="width:20% ">
+                    <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li id="home_icon" style="width:20%">
+                    <i class="fas fa-home"></i>
+                </li>
+                <li id="user_icon" style="width:20%">
+                    <i class="fas fa-user"></i>
+                </li>
+                <li id="other_icon" style="width:20%">
+                    <i class="fas fa-ellipsis-v"></i>
+                </li>
+
+            </ul>
+        </div>
     </div>
 </div>
 
