--- a/Login.html
+++ b/Login.html
@@ -45,31 +45,14 @@
                 <input type="password" name="password" id="password"  placeholder="Password">
                 <label for="remember" id="remember-label">Remember me</label>
                 <input type="checkbox" name="remember" id="remember">
-                <br>
+
+            </div>
+            <div class="ui-field-contain">
                 <button class="btn warning" id="login-btn">Login</button>
                 <p id = "para1">Dont have an account already ?  <u id="register-here"> Register here </u> </p>
             </div>
         </form>
     </div>
-
-    <!--<div data-role="main" class="ui-content">-->
-
-        <!--<h1 class="login-title"><b>Login</b></h1>-->
-        <!--<p id = "para">Let's get started </p>-->
-
-        <!--&lt;!&ndash;<form method="post" action="demoform.asp" id="form">&ndash;&gt;-->
-            <!--&lt;!&ndash;<div class="ui-field-contain">&ndash;&gt;-->
-                <!--&lt;!&ndash;<label for="name" id="name-label"></label>&ndash;&gt;-->
-                <!--&lt;!&ndash;<input type="email" class="form-control" id="name" placeholder="Username" name="name">&ndash;&gt;-->
-                 <!--&lt;!&ndash;<label for="password" id="pword-label"></label>&ndash;&gt;-->
-                <!--&lt;!&ndash;<input type="password" class="form-control" id="password" placeholder="Password" name="password">&ndash;&gt;-->
-                <!--&lt;!&ndash;<label class="form-check-label" id="remember">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<input class="form-check-input" type="checkbox" name="remember"> Remember me&ndash;&gt;-->
-                <!--&lt;!&ndash;</label>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--&lt;!&ndash;<button type="submit" class="btn btn-primary" id="submit">Login</button>&ndash;&gt;-->
-        <!--&lt;!&ndash;</form>&ndash;&gt;-->
-    <!--</div>-->
 
     <!-- Bottom Navigation -->
     <div data-role="footer" style="text-align:center;" data-position="fixed">
