div changes in login and register

--- a/Register.html
+++ b/Register.html
@@ -43,12 +43,14 @@
                 <label for="password" id="passwordlabel"></label>
                 <input type="password" name="password" id="password"  placeholder="Password">
                 <label for="phoneNo" id="numberlabel"></label>
-                <input type="password" name="phoneNo" id="phoneNo"  placeholder="Telephone number">
+                <input type="number" name="phoneNo" id="phoneNo"  placeholder="Telephone number">
                 <label for="agree" id="agree-label">Remember me</label>
                 <input type="checkbox" name="agree" id="agree">
-                <br>
+            </div>
+            <div class="ui-field-contain">
                 <button class="btn warning" id="register-btn">Register</button>
             </div>
+
         </form>
     </div>
 
