--- a/HomePage.html
+++ b/HomePage.html
@@ -17,10 +17,10 @@
 <body style="background-color: white">
 
 
-<div data-role="page" data-position="fixed">
+<div data-role="page" >
 
     <!-- Top Navigation -->
-    <div data-role="header" id="top_navigation">
+    <div data-role="header" id="top_navigation" data-position="fixed">
         <i class="fas fa-th" id="category_icon"></i>
         <div align="center" class="logo">
             <img class="logo" src="images/shopmologo.png" alt="Image">
