--- a/LoginPage.html
+++ b/LoginPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
@@ -58,7 +58,7 @@
     <div data-role="footer" style="text-align:center;" data-position="fixed">
         <div data-role="navbar" id="bottom_nav">
             <ul>
-                <li id="qrcode_icon" style="wi    dth:20%">
+                <li id="qrcode_icon" style="width:20%">
                     <i class="fas fa-qrcode"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
