--- a/HomePage.html
+++ b/HomePage.html
@@ -24,7 +24,7 @@
         <i class="fas fa-th" id="category_icon"></i>
         <div align="center" class="logo">
             <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60">
-            <i class="fa fa-tags" id="promotion_icon"></i>
+            <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
         </div>
 
         <div data-role="navbar" id="search">
