--- a/Products.html
+++ b/Products.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <link rel="stylesheet" href="Style/promo_style.css">
+    <link rel="stylesheet" href="Style/products_style.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -19,7 +19,6 @@
 
 </head>
 <body style="background-color: white">
-
 
 <div data-role="page" >
 
@@ -48,7 +47,7 @@
 
     <!-- Promotion Content -->
     <div data-role="main" class="ui-content">
-        <button class="btn warning" id="login-btn" onclick="window.location.href = 'Products.html'">GROCERY OFFERS</button>
+        <button class="btn warning" id="login-btn">FILTER PROMO ITEMS</button>
 
 
         <!-- ================ trending product section start ================= -->
@@ -72,6 +71,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-4 col-xl-3 c1">
+                        <div class="card text-center card-product products">
+                            <div class="card-product__img">
+                                <img class="card-img" src="images/milk.jpeg" alt="">
+                            </div>
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                                <h5>Anchor Milk 5kg</h5>
+                                <p class = "item-text"><b>LKR 600.00</b></p>
+                                <p class ="promo-off">Best Price</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
@@ -86,6 +102,40 @@
                                 <h5>Magee Noodles 200g</h5>
                                 <p class = "promo-item-text"><b>LKR 100.00</b></p>
                                 <p class ="promo-off">10% Off</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-3  c1">
+                        <div class="card text-center card-product products">
+                            <div class="card-product__img">
+                                <img class="card-img" src="images/pringles.jfif" alt="">
+                            </div>
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                                <h5>Pringles 300g</h5>
+                                <p class = "item-text"><b>LKR 600.00</b></p>
+                                <p class ="promo-off">Best Price</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-3 c1">
+                        <div class="card text-center card-product products">
+                            <div class="card-product__img">
+                                <img class="card-img" src="images/sugar.jpg" alt="">
+                            </div>
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                                <h5>Sugar 500g</h5>
+                                <p class = "item-text"><b>LKR 150.00</b></p>
+                                <p class ="promo-off">Best Price</p>
                             </div>
                         </div>
                     </div>
@@ -123,48 +173,20 @@
                             </div>
                         </div>
                     </div>
-
-                </div>
-            </div>
-        </section>
-        <!-- ================ trending product section end ================= -->
-
-
-    </div>
-
-    <div data-role="main" class="ui-content">
-        <button class="btn warning" id="login-btn">BANK OFFERS</button>
-
-
-        <!-- ================ trending product section start ================= -->
-        <section class="section-margin calc-60px">
-            <div class="container">
-                <div class="row">
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/1PROMO2.jpg" alt="">
+                                <img class="card-img" src="images/kitkat.jpg" alt="">
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="card text-center card-product products">
-                            <div class="card-product__img">
-                                <img class="card-img" src="images/3PROMO2.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="card text-center card-product products">
-                            <div class="card-product__img">
-                                <img class="card-img" src="images/NTBPromo.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3">
-                        <div class="card text-center card-product products">
-                            <div class="card-product__img">
-                                <img class="card-img" src="images/1PROMO2.jpg" alt="">
+                            <div>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                                <h5>KitKat 200g</h5>
+                                <p class = "promo-item-text"><b>LKR 300.00</b></p>
+                                <p class ="promo-off">10% Off</p>
                             </div>
                         </div>
                     </div>
@@ -176,7 +198,6 @@
 
 
     </div>
-
 
 
     <!-- Bottom Navigation -->
@@ -230,6 +251,22 @@
                 }
             }
         });
+    });
+</script>
+<!--Hide Promotion items-->
+<script>
+    $(document).ready(function(){
+        if($(".c1:visible")){
+            $(".btn").click(function(){
+                $(".c1").hide("slow");
+        });
+        }
+
+        else if($(".c1:hidden")){
+            $(".btn").click(function(){
+                $(".c1").show("slow");
+            });
+        }
     });
 </script>
 
