--- a/ProductPage.html
+++ b/ProductPage.html
@@ -35,7 +35,7 @@
                         <input id="myFilter" data-type="search" placeholder="Search for items..">
                     </form>
                 </li>
-                <li id="filter_icon" style="width:15%">
+                <li id="delete_icon" style="width:15%">
                     <i class="fas fa-filter"></i>
                 </li>
             </ul>
@@ -76,9 +76,9 @@
 
                             </td>
                             <td>
-                            <input type="text" name="qty" id="sst" size="1" maxlength="12" value="1"
+                                <input type="text" name="qty" id="sst" size="1" maxlength="12" value="1"
                                        title="Quantity:"
-                                          class="input-text qty">
+                                       class="input-text qty">
                             </td>
                             <td>
                                 <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
@@ -86,8 +86,8 @@
                                 </button>
 
                             </td>
-                        <td>
-                        </td>
+                            <td>
+                            </td>
                     </table>
                     <button class="btn info" id="addtocart-btn">Add To Cart</button>
                 </div>
@@ -132,6 +132,6 @@
 
 <script>
 
-    </script>
+</script>
 </body>
 </html>
