--- a/CartPage.html
+++ b/CartPage.html
@@ -22,8 +22,8 @@
     <div data-role="header" id="top_navigation" data-position="fixed">
         <i class="fas fa-th" id="category_icon"></i>
         <div align="center" class="logo">
-            <img class="logo" src="images/shopmologo.png" alt="Image">
-            <i class="fa fa-tags" id="promotion_icon"></i>
+            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
+            <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
         </div>
 
         <div data-role="navbar" id="search">
@@ -45,7 +45,7 @@
     <div data-role="main" class="ui-content">
         <p id="cart-title"><b>Shopping Cart</b></p>
 
-        <div class="card">
+        <div class="card c1">
             <table>
                 <col width="80">
                 <col width="80">
@@ -69,7 +69,7 @@
             </table>
         </div>
 
-        <div class="card">
+        <div class="card c2">
             <table>
                 <col width="80">
                 <col width="80">
@@ -93,7 +93,7 @@
             </table>
         </div>
 
-        <div class="card">
+        <div class="card c3">
             <table>
                 <col width="80">
                 <col width="80">
@@ -176,13 +176,13 @@
                     <i class="fas fa-qrcode"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
                 </li>
                 <li id="home_icon" style="width:20%">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
                     <i class="fas fa-ellipsis-v"></i>
@@ -190,26 +190,25 @@
 
             </ul>
         </div>
-
     </div>
 
 </div>
 
 <script>
 
-        $(".deletebtn3").click(function(){
-            $(".card").hide("slow");
+    $(document).ready(function(){
+        $("#deletebtn1").click(function(){
+            $(".c1").hide("slow");
         });
 
-
-        $(".deletebtn3").click(function(){
-            $(".card").hide("slow");
+        $("#deletebtn2").click(function(){
+            $(".c2").hide("slow");
         });
 
-
-        $(".deletebtn3").click(function(){
-            $(".card").hide("slow");
+        $("#deletebtn3").click(function(){
+            $(".c3").hide("slow");
         });
+    });
 
 </script>
 </body>
