--- a/DeliveryPage.html
+++ b/DeliveryPage.html
@@ -23,8 +23,8 @@
     <div data-role="header" id="top_navigation" data-position="fixed">
         <i class="fas fa-th" id="category_icon"></i>
         <div align="center" class="logo">
-            <img class="logo" src="images/shopmologo.png" alt="Image">
-            <i class="fa fa-tags" id="promotion_icon"></i>
+            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
+            <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
         </div>
 
         <div data-role="navbar" id="search">
@@ -86,13 +86,13 @@
                     <i class="fas fa-qrcode"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
                 </li>
                 <li id="home_icon" style="width:20%">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
                     <i class="fas fa-ellipsis-v"></i>
