--- a/HomePage.html
+++ b/HomePage.html
@@ -23,7 +23,7 @@
     <div data-role="header" id="top_navigation" data-position="fixed">
         <i class="fas fa-th" id="category_icon"></i>
         <div align="center" class="logo">
-            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60">
+            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
             <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
         </div>
 
@@ -56,18 +56,18 @@
             </ul>
 
             <!-- The slideshow -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/promo1.jpg" alt="promo 1" width="1100" height="500">
+            <div class="carousel-inner slides">
+                <div class="carousel-item active slides">
+                    <img src="images/promo1.jpg" alt="promo 1"  style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
                 </div>
-                <div class="carousel-item">
-                    <img src="images/4PROMO.jpg" alt="promo 2" width="1100" height="500">
+                <div class="carousel-item slides">
+                    <img src="images/1PROMO.jpg" alt="promo 2"  style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
                 </div>
-                <div class="carousel-item">
-                    <img src="images/promo1.jpg" alt="promo 3" width="1100" height="500">
+                <div class="carousel-item slides">
+                    <img src="images/2PROMO.png" alt="promo 3" style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
                 </div>
-                <div class="carousel-item">
-                    <img src="images/4PROMO.jpg" alt="promo 3" width="1100" height="500">
+                <div class="carousel-item slides">
+                    <img src="images/4PROMO.jpg" alt="promo 3" style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
                 </div>
             </div>
 
@@ -87,7 +87,7 @@
         <div class="categories_menu">
             <span class="fas fa-ice-cream fa-3x circle-icon"></span>
             <span class="fas fa-notes-medical fa-3x circle-icon"> </span>
-            <span class="fas fa-shopping-bag fa-3x circle-icon"></span>
+            <span class="fas fa-shopping-bag fa-3x circle-icon" onclick="window.location.href='Products.html'"></span>
             <span class="fas fa-chair fa-3x circle-icon"></span>
             <span class="fas fa-glass-martini-alt fa-3x circle-icon"></span>
             <span class="fas fa-wine-bottle fa-3x circle-icon"></span>
@@ -279,13 +279,13 @@
                     <i class="fas fa-qrcode"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
                 </li>
                 <li id="home_icon" style="width:20%">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
                     <i class="fas fa-ellipsis-v"></i>
