--- a/CartPage.html
+++ b/CartPage.html
@@ -52,7 +52,7 @@
                 <col width="80">
                 <tr>
                     <td class="product-image-td">
-                        <img src="images/rice.jpg" alt="Rice" style="width:100%">
+                        <img class="img" src="images/rice.jpg" alt="Rice" style="width:100%">
                     </td>
                     <td class="product-data-td">
                         <p class="product-title"><b>Rice </b></p>
@@ -61,7 +61,7 @@
                     </td>
 
                     <td class="product-extra-td">
-                        <i class="fa fa-trash" id="deletebtn1"></i>
+                        <i class="fa fa-trash del" id="deletebtn1"></i>
                         <p class="product-qty"> Quantity: 1 </p>
                     </td>
                     </td>
@@ -76,7 +76,7 @@
                 <col width="80">
                 <tr>
                     <td class="product-image-td">
-                        <img src="images/kitkat.jpg" alt="KitKat" style="width:100%">
+                        <img class="img" src="images/kitkat.jpg" alt="KitKat" style="width:100%">
                     </td>
                     <td class="product-data-td">
                         <p class="product-title"><b>KitKat </b></p>
@@ -85,7 +85,7 @@
                     </td>
 
                     <td class="product-extra-td">
-                        <i class="fa fa-trash" id="deletebtn2"></i>
+                        <i class="fa fa-trash del" id="deletebtn2"></i>
                         <p class="product-qty"> Quantity: 2 </p>
                     </td>
                     </td>
@@ -100,7 +100,7 @@
                 <col width="80">
                 <tr>
                     <td class="product-image-td">
-                        <img src="images/milk.jpeg" alt="Milk" style="width:100%">
+                        <img class="img" src="images/milk.jpeg" alt="Milk" style="width:100%">
                     </td>
                     <td class="product-data-td">
                         <p class="product-title"><b>Milk </b></p>
@@ -109,7 +109,7 @@
                     </td>
 
                     <td class="product-extra-td">
-                        <i class="fa fa-trash" id="deletebtn3"></i>
+                        <i class="fa fa-trash del" id="deletebtn3"></i>
                         <p class="product-qty"> Quantity: 4 </p>
 
                     </td>
