--- a/HomePage.html
+++ b/HomePage.html
@@ -21,10 +21,27 @@
 
     <!-- Top Navigation -->
     <div data-role="header" id="top_navigation" data-position="fixed">
-        <i class="fas fa-th" id="category_icon"></i>
+        <div class="dropdown" id="category_icon">
+            <i class="fas fa-th" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            </i>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Frozen food</a>
+                <a class="dropdown-item" href="#">Pharmacy</a>
+                <a class="dropdown-item" href="#">Grocery</a>
+                <a class="dropdown-item" href="#">Household</a>
+                <a class="dropdown-item" href="#">Liqour</a>
+                <a class="dropdown-item" href="#">Beverages</a>
+                <a class="dropdown-item" href="#">Homeware</a>
+                <a class="dropdown-item" href="#">Chilled</a>
+                <a class="dropdown-item" href="#">Vegitables</a>
+                <a class="dropdown-item" href="#">Meat</a>
+                <a class="dropdown-item" href="#">Fish</a>
+                <a class="dropdown-item" href="#">Fruits</a>
+            </div>
+        </div>
         <div align="center" class="logo">
-            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
-            <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
+            <img class="logo" src="images/shopmologo.png" alt="Image">
+            <i class="fa fa-tags" id="promotion_icon"></i>
         </div>
 
         <div data-role="navbar" id="search">
@@ -56,18 +73,18 @@
             </ul>
 
             <!-- The slideshow -->
-            <div class="carousel-inner slides">
-                <div class="carousel-item active slides">
-                    <img src="images/promo1.jpg" alt="promo 1"  style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/promo1.jpg" alt="promo 1" width="1100" height="500">
                 </div>
-                <div class="carousel-item slides">
-                    <img src="images/1PROMO.jpg" alt="promo 2"  style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                <div class="carousel-item">
+                    <img src="images/4PROMO.jpg" alt="promo 2" width="1100" height="500">
                 </div>
-                <div class="carousel-item slides">
-                    <img src="images/2PROMO.png" alt="promo 3" style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                <div class="carousel-item">
+                    <img src="images/promo1.jpg" alt="promo 3" width="1100" height="500">
                 </div>
-                <div class="carousel-item slides">
-                    <img src="images/4PROMO.jpg" alt="promo 3" style="max-width:600px;height:auto;" onclick="window.location.href='Promotions.html'">
+                <div class="carousel-item">
+                    <img src="images/4PROMO.jpg" alt="promo 3" width="1100" height="500">
                 </div>
             </div>
 
@@ -87,7 +104,7 @@
         <div class="categories_menu">
             <span class="fas fa-ice-cream fa-3x circle-icon"></span>
             <span class="fas fa-notes-medical fa-3x circle-icon"> </span>
-            <span class="fas fa-shopping-bag fa-3x circle-icon" onclick="window.location.href='Products.html'"></span>
+            <span class="fas fa-shopping-bag fa-3x circle-icon"></span>
             <span class="fas fa-chair fa-3x circle-icon"></span>
             <span class="fas fa-glass-martini-alt fa-3x circle-icon"></span>
             <span class="fas fa-wine-bottle fa-3x circle-icon"></span>
@@ -279,13 +296,13 @@
                     <i class="fas fa-qrcode"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
-                    <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
+                    <i class="fas fa-shopping-cart"></i>
                 </li>
                 <li id="home_icon" style="width:20%">
-                    <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
+                    <i class="fas fa-home"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
+                    <i class="fas fa-user"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
                     <i class="fas fa-ellipsis-v"></i>
