--- a/Products.html
+++ b/Products.html
@@ -32,15 +32,15 @@
 
         <div data-role="navbar" id="search">
             <ul>
-                <li style="width:85%">
+                <li style="width:100%">
 
                     <form class="ui-filterable">
                         <input id="myFilter" data-type="search" placeholder="Search for items..">
                     </form>
                 </li>
-                <li id="filter_icon" style="width:15%">
-                    <i class="fas fa-filter"></i>
-                </li>
+                <!--                <li id="filter_icon" style="width:15%">-->
+                <!--                    <i class="fas fa-filter"></i>-->
+                <!--                </li>-->
             </ul>
         </div>
     </div>
