--- a/DeliveryPage.html
+++ b/DeliveryPage.html
@@ -50,7 +50,7 @@
         <div data-role="main" class="ui-content" >
             <p id="recipientInfo_title"><b>Recipient's Information </b></p>
             <br>
-            <form method="post" action="demoform.asp">
+            <form method="post" action="demoform.asp" style="text-align: center">
 
                     <label for="fullname" id="namelabel"></label>
                     <input type="text" name="fullname" id="fullname" placeholder="Recipient's Name">
@@ -71,6 +71,7 @@
 
                 <br>
                 <button class="btn info" id="back-btn">Proceed Payment</button>
+                <br>
                 <button class="btn warning" id="payment-btn">Back</button>
 
 
