--- a/HomePage.html
+++ b/HomePage.html
@@ -120,6 +120,28 @@
                 <col width="80">
                 <tr>
                     <td class="product-image-td">
+                        <img class="img" src="images/pringles.jfif" alt="Rice" style="width:100%">
+                    </td>
+                    <td class="product-data-td">
+                        <p class="product-title"><b>Pringles</b></p>
+                        <p class="product-price">LKR 500</p>
+                        <!--<p id="product-desc"><b>400g </b></p>-->
+                    </td>
+
+                    <td class="product-extra-td">
+                        <p class="product-qty">30% Off</p>
+                    </td>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="card c1" >
+            <table>
+                <col width="80">
+                <col width="80">
+                <col width="80">
+                <tr>
+                    <td class="product-image-td">
                         <img class="img" src="images/rice.jpg" alt="Rice" style="width:100%">
                     </td>
                     <td class="product-data-td">
@@ -129,8 +151,29 @@
                     </td>
 
                     <td class="product-extra-td">
-                        <i class="fa fa-trash del" id="deletebtn1"></i>
-                        <p class="product-qty"> Quantity: 1 </p>
+                        <p class="product-qty">10% Off</p>
+                    </td>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="card c1" >
+            <table>
+                <col width="80">
+                <col width="80">
+                <col width="80">
+                <tr>
+                    <td class="product-image-td">
+                        <img class="img" src="images/oreos.jpg" alt="Rice" style="width:100%">
+                    </td>
+                    <td class="product-data-td">
+                        <p class="product-title"><b>Oreos</b></p>
+                        <p class="product-price">LKR 700</p>
+                        <!--<p id="product-desc"><b>400g </b></p>-->
+                    </td>
+
+                    <td class="product-extra-td">
+                        <p class="product-qty">40% Off</p>
                     </td>
                     </td>
                 </tr>
