--- a/Products.html
+++ b/Products.html
@@ -68,6 +68,7 @@
                                 <h5>Daawat Basmati Rice</h5>
                                 <p class = "promo-item-text"><b>LKR 500.00</b></p>
                                 <p class ="promo-off">10% Off</p>
+                                <button class="btn warning" id="cart-btn1">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -85,6 +86,7 @@
                                 <h5>Anchor Milk 5kg</h5>
                                 <p class = "item-text"><b>LKR 600.00</b></p>
                                 <p class ="promo-off">Best Price</p>
+                                <button class="btn warning" id="cart-btn2">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -102,6 +104,7 @@
                                 <h5>Magee Noodles 200g</h5>
                                 <p class = "promo-item-text"><b>LKR 100.00</b></p>
                                 <p class ="promo-off">10% Off</p>
+                                <button class="btn warning" id="cart-btn3">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -119,6 +122,7 @@
                                 <h5>Pringles 300g</h5>
                                 <p class = "item-text"><b>LKR 600.00</b></p>
                                 <p class ="promo-off">Best Price</p>
+                                <button class="btn warning" id="cart-btn4">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -136,6 +140,7 @@
                                 <h5>Sugar 500g</h5>
                                 <p class = "item-text"><b>LKR 150.00</b></p>
                                 <p class ="promo-off">Best Price</p>
+                                <button class="btn warning" id="cart-btn5">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -153,6 +158,7 @@
                                 <h5>Heinz Ketchup 500ml</h5>
                                 <p class = "promo-item-text"><b>LKR 800.00</b></p>
                                 <p class ="promo-off">10% Off</p>
+                                <button class="btn warning" id="cart-btn6">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -170,6 +176,7 @@
                                 <h5>Chilly 71g</h5>
                                 <p class = "promo-item-text"><b>LKR 70.00</b></p>
                                 <p class ="promo-off">10% Off</p>
+                                <button class="btn warning" id="cart-btn7">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -187,6 +194,7 @@
                                 <h5>KitKat 200g</h5>
                                 <p class = "promo-item-text"><b>LKR 300.00</b></p>
                                 <p class ="promo-off">10% Off</p>
+                                <button class="btn warning" id="cart-btn8">Add to Cart</button>
                             </div>
                         </div>
                     </div>
